# ChangeLog for net-misc/nxserver-freenx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxserver-freenx/ChangeLog,v 1.63 2009/05/14 15:15:46 voyageur Exp $

*nxserver-freenx-0.7.3_p104-r1 (14 May 2009)

  14 May 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -nxserver-freenx-0.7.3_p104.ebuild, +nxserver-freenx-0.7.3_p104-r1.ebuild:
  Bump to restore media-fonts/font-cursor-misc and
  media-fonts/font-misc-misc dependency, thanks Lum
  <gentoo-bugzilla@lum.co.uk> in bug #269769

*nxserver-freenx-0.7.3_p104 (20 Apr 2009)

  20 Apr 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxserver-freenx-0.7.3_p104-pam_ssh.patch,
  +nxserver-freenx-0.7.3_p104.ebuild:
  Version bump, with some ebuild changes: dropped arts/cups/esd USE flags,
  better to manually enable them in configuration if needed; change
  recommanded nxsetup line, warn users without PAM that they need to unlock
  the nx account (bug #262496); add patch to support pam_ssh (i.e pambase
  with USE=ssh), bugs #142694 and #266572

  20 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  nxserver-freenx-0.7.3_p102.ebuild:
  Add rdesktop and vnc USE flags, change depends for vnc as discussed in bug
  #262147

  16 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  nxserver-freenx-0.7.3_p102.ebuild:
  Append utmp group to nx user, instead of resetting the additional groups
  (usermod -a option). Thanks Alexander Bezrukov <phmagic@mail.ru> in bug
  #262481

*nxserver-freenx-0.7.3_p102 (12 Mar 2009)

  12 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nxserver-freenx-0.7.3_p102-cflags.patch,
  +files/nxserver-freenx-0.7.3_p102-nxloadconfig.patch,
  +nxserver-freenx-0.7.3_p102.ebuild:
  Update to use freenx-team tarballs, includes some interesting patches and
  fixes (including fixing keyboard keys for some people, and shadow
  sessions)

  08 Mar 2009; Markus Meier <maekke@gentoo.org>